fix section overlap

--- a/css/main.css
+++ b/css/main.css
@@ -841,3 +841,10 @@ h5:hover .header-link,
 h6:hover .header-link {
   opacity: 1;
 }
+
+:target::before {
+  content: "";
+  display: block;
+  height: 60px; /* fixed header height*/
+  margin: -60px 0 0; /* negative fixed header height */
+}
